add building images by maven